# tg-expense-tracker

./: .flake8  .gitignore  .pre-commit-config.yaml  .spaceignore  README.md  main.py  pyproject.toml
.github/workflows/: test.yml
src/: __init__.py  bot.py  chart_service.py  currency_converter.py  finances.py  keyboard_service.py  phrase.py  report_service.py  settings.py  spreadsheets.py
src/bot/: bot.py  filters.py  reply.py
src/bot/commands/: add_expense.py  add_report.py
src/bot/forms/: report.py  spending.py
src/static/bot_phrases/: help.md  welcome.md
tests/: __init__.py  test_bot.py  test_finnaces.py
