[tool.poetry]
name = "tg-expense-tracker"
version = "0.1.0"
description = ""
authors = ["artem bogdanov <abogdaov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
aiogram = "^3.2.0"
google-api-python-client = "^2.109.0"
google-auth-httplib2 = "^0.1.1"
google-auth-oauthlib = "^1.1.0"
google-auth = "^2.24.0"
google-currency = "^1.0.10"
types-requests = "^2.31.0.10"
#pygal = "^3.0.4"
#cairosvg = "^2.7.1"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["ct_ws", ]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true


[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]

[tool.poetry.group.dev.dependencies]
httpx = "^0.25.2"
pytest-asyncio = "^0.21.1"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pytest = "^7.4.3"
isort = "^5.12.0"
pre-commit = "^3.5.0"
wemake-python-styleguide = "^0.18.0"
black = "^23.11.0"
autoflake = "^2.2.1"
flake8-quotes = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
